<resources>
    <string name="app_name">Learn-android</string>
    <string name="LifeCycleTextView">LifeCycleTextView</string>

    <string name="viewmodel_text">0</string>
    <string name="viewmodel_1">+1</string>
    <string name="viewmodel_2">+2</string>
    <string name="thumb_down">thumb_down</string>
    <string name="thumb_up">thumb_up</string>
    <string name="textview1">Team A</string>
    <string name="textview2">Team B</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="buttonA1">+1</string>
    <string name="buttonA2">+2</string>
    <string name="buttonA3">+3</string>
    <string name="buttonB1">+1</string>
    <string name="buttonB2">+2</string>
    <string name="buttonB3">+3</string>
    <string name="imageButtonDesc">imageButtonDesc</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calc_title_message">Calculation Test</string>
    <string name="calc_title_button_message">Enter</string>
    <string name="calc_high_score_message">High Score:%d</string>
    <string name="calc_button_0">0</string>
    <string name="calc_button_1">1</string>
    <string name="calc_button_2">2</string>
    <string name="calc_button_3">3</string>
    <string name="calc_button_4">4</string>
    <string name="calc_button_5">5</string>
    <string name="calc_button_6">6</string>
    <string name="calc_button_7">7</string>
    <string name="calc_button_8">8</string>
    <string name="calc_button_9">9</string>
    <string name="calc_button_clear">C</string>
    <string name="calc_button_submit">OK</string>
    <string name="calc_symbol_plus">+</string>
    <string name="calc_symbol_equal">=</string>
    <string name="calc_symbol_quest_mark">\?</string>
    <string name="calc_current_score">Score:%d</string>
    <string name="calc_input_indicator">Your Answer:</string>
    <string name="calc_lose_message">Your Lose!</string>
    <string name="calc_win_message">Your Win!</string>
    <string name="calc_lose_score_message">Your Score:%d</string>
    <string name="calc_win_score_message">New Score:%d</string>
    <string name="calc_button_to_title">Back</string>
    <string name="calc_answer_corrent_message">Correct, Go on!</string>
    <string name="calc_dialog_quit_title">Are your sure to quit?</string>
    <string name="calc_dialog_positive_msg">OK</string>
    <string name="calc_dialog_negative_msg">Cancel</string>
</resources>