<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
          name="data"
          type="cn.yoouu.learn.demo.calculation.viewmodel.CalcViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      tools:context=".demo.calculation.fragment.LoseFragment">


        <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline24"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintGuide_percent="0.1" />

        <androidx.constraintlayout.widget.Guideline
          android:id="@+id/guideline25"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          app:layout_constraintGuide_percent="0.45" />

        <ImageView
          android:id="@+id/imageView2"
          android:layout_width="0dp"
          android:layout_height="0dp"
          android:contentDescription="@string/imageButtonDesc"
          android:src="@drawable/ic_baseline_sentiment_very_dissatisfied_24"
          app:layout_constraintBottom_toTopOf="@+id/guideline25"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/guideline24" />

        <TextView
          android:id="@+id/textView16"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/calc_lose_message"
          android:textSize="@dimen/calc_big_font"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView2"
          app:layout_constraintVertical_bias="0.1" />

        <TextView
          android:id="@+id/textView17"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@{@string/calc_lose_score_message(data.currentScore)}"
          android:textSize="@dimen/calc_big_font"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toBottomOf="@+id/imageView2"
          app:layout_constraintVertical_bias="0.3"
          tools:text="Your Score:9" />

        <Button
          android:id="@+id/calc_btn_lose_back"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/calc_button_to_title"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
          app:layout_constraintTop_toTopOf="@+id/guideline25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>